xrnyc-ng-signup.css
/*
This is css for an event campaign page that will be used as a signup page
for the subgroup but this way it appears on the event campaign map.
*/

/*
ACTION NETWORK DEFAULT CSS:
<!-- [START CUSTOM CSS - GENERATED FOR USERS] -->
<!-- This CSS was generated for you, feel free to add to or edit it. --> 
<style type="text/css">
*/
			body {
				color:#4E4E4E;
				margin: 0;
			}
			
			#gen_header {
				padding: 0;
				background-color: #ffffff; /* [THIS IS GENERATED FROM THE *FIRST* COLOR PICKER OPTION] */
				text-align: center;
			}
			
			
			#gen_header img {
				width: 100%;
				max-width: 820px;
			}
			
			.gen_wrapper {
				padding: 40px 20px;
				width: 1160px;
				max-width: 100%;
				margin: auto;
				box-sizing: border-box;
			}
			
			.gen_wrapper #can_embed_form input[type="submit"],
			.can_embed-html #can_embed_form input[type="submit"],
			.gen_wrapper #can_embed_form .button,
			.can_embed-html #can_embed_form .button,
			.gen_wrapper #donate_auto_modal input[type="submit"],
			.can_embed-html #donate_auto_modal input[type="submit"],
			.gen_wrapper #donate_auto_modal .button,
			.can_embed-html #donate_auto_modal .button {
				background-color:#ffc11e; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
			}
			
				.gen_wrapper #can_embed_form input[type="submit"]:hover,
				.can_embed-html #can_embed_form input[type="submit"]:hover,
				.gen_wrapper #can_embed_form .button:hover,
				.can_embed-html #can_embed_form .button:hover,
				.gen_wrapper #donate_auto_modal input[type="submit"]:hover,
				.can_embed-html #donate_auto_modal input[type="submit"]:hover,
				.gen_wrapper #donate_auto_modal .button:hover, 
				.can_embed-html #donate_auto_modal .button:hover {
					background-color:#ffc11e;  /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
					opacity: .7;
				}
			
			.gen_wrapper #can_embed_form .action_status_running_total,
			.can_embed-html #can_embed_form .action_status_running_total,
			.gen_wrapper .gen_name,
			.gen_wrapper a,
			#can_fundraising_widget a,
			.ticketed_event a {
				color:#ffc11e; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
				text-decoration: none;
			}
			
			.gen_wrapper a:hover,
			#can_fundraising_widget a:hover,
			.ticketed_event a:hover {
				color:#ffc11e; /* [THIS IS GENERATED FROM THE *SECOND* COLOR PICKER OPTION] */
				opacity: .7;
				text-decoration: none;
			}
				
/* 
   --------------------------------
   END ACTION NETWORK DEFAULT CSS </style>
   -----------------------------------
*/		


#navframe {
  width:100%;
  border:0;
  margin:0;
  padding:0;
  height: 89px;
}
@media screen and (max-width: 819px) {
  #navframe {
    height: 75px;
  }
}


body{
    font-family: Crimson Text;
}
@font-face{font-family:'FucXed';src:url('https://static1.squarespace.com/static/5bda9184c3c16a86b3c38cc5/t/5bdbad56c2241bcd3a123fd6/1541123414560/FUCXEDCAPSLatin-Regular.woff2') format('woff2'),url('https://static1.squarespace.com/static/5bda9184c3c16a86b3c38cc5/t/5bdbad426d2a73d30dcb3aad/1541123394903/FUCXEDCAPSLatin-Regular.woff') format('woff'),url('https://static1.squarespace.com/static/5bda9184c3c16a86b3c38cc5/t/5bdbad4cc2241bcd3a123f2c/1541123404942/FUCXEDCAPSLatin-Regular.otf') format('otf');font-weight:normal;font-style:normal}

#can_embed_form input[type=submit], h1,h2, h3, body #can_embed_form h2, body #donate_auto_modal h2, body #donate_make_recurring_modal h2 {font-family:"FucXed",sans-serif;text-transform:uppercase;word-spacing:-.15em;-webkit-hyphens:none;-ms-hyphens:none;hyphens:none}

/*Hide event details for NG Event campaign wrapper */
.ng-map #can_main_col .last_line, 
.ng-map #can_main_col .event_map_wrap {
  display:none;
}

#ng-title .name, /* default */
#ng-title-les .name {
	font-size: 9vw
}
.last_line, .last_line h2, .last_line h4
#ng-title {
  margin:0;
  padding:0;
}
.ng-header {
	display:inline-block;
}
.ng-subtitle {
    float: right;
    font-size: 1em;
    margin-top: -1vw;
}

